--- a/ObsidianRag/Dockerfile
+++ b/ObsidianRag/Dockerfile
@@ -7,17 +7,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["RagExample/RagExample.csproj", "RagExample/"]
-RUN dotnet restore "RagExample/RagExample.csproj"
+COPY ["ObsidianRag/ObsidianRag.csproj", "ObsidianRag/"]
+RUN dotnet restore "ObsidianRag/ObsidianRag.csproj"
 COPY . .
-WORKDIR "/src/RagExample"
-RUN dotnet build "./RagExample.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/ObsidianRag"
+RUN dotnet build "./ObsidianRag.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./RagExample.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./ObsidianRag.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "RagExample.dll"]
+ENTRYPOINT ["dotnet", "ObsidianRag.dll"]
